added more information to README